k8s/apps/network/unifi-controller/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-controller
  namespace: unifi-controller
  labels:
    app.kubernetes.io/name: unifi-controller
    app.kubernetes.io/instance: unifi-controller
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi-controller
      app.kubernetes.io/instance: unifi-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi-controller
        app.kubernetes.io/instance: unifi-controller
    spec:
      containers:
        - name: controller
          image: ghcr.io/linuxserver/unifi-network-application:10.1.89
          resources:
            requests:
              cpu: 10m
              memory: 1Gi
            limits:
              memory: 1.1Gi
          ports:
            - name: http
              containerPort: 8443
            - name: stun
              protocol: UDP
              containerPort: 3478
            - name: ap-discovery
              protocol: UDP
              containerPort: 10001
            - name: dev-comms
              containerPort: 8080
            - name: l2-discovery
              protocol: UDP
              containerPort: 1900
            - name: speedtest
              containerPort: 6789
            - name: guest-http
              containerPort: 8880
            - name: guest-https
              containerPort: 8843
          volumeMounts:
            - name: unifi
              mountPath: /config
      volumes:
        - name: unifi
          persistentVolumeClaim:
            claimName: unifi-data
