k8s/apps/network/unifi-controller/ferretdb.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ferretdb
  namespace: unifi-controller
  labels:
    app.kubernetes.io/name: ferretdb
    app.kubernetes.io/instance: ferretdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ferretdb
      app.kubernetes.io/instance: ferretdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ferretdb
        app.kubernetes.io/instance: ferretdb
    spec:
      containers:
        - name: ferretdb
          image: ghcr.io/ferretdb/ferretdb:2.1.0
          ports:
            - name: mongo
              protocol: TCP
              containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: ferretdb
  namespace: unifi-controller
  labels:
    app.kubernetes.io/name: ferretdb
    app.kubernetes.io/instance: ferretdb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ferretdb
    app.kubernetes.io/instance: ferretdb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
      protocol: TCP
